# wikiextract

./: .gitignore  core  pyproject.toml  requirements.txt
data/: wiki-kaggle-17_18.db
notebooks/: Read Wikipedia Kaggle SQLite.ipynb  Topic Modeling on Wiki Data Graph.ipynb  Topic Modeling on Wiki on 5 Million.ipynb  Topic Modeling on Wiki on Non-Optimized.ipynb  Topic Modeling on Wiki.ipynb  Wikipedia Extract.ipynb
notebooks/.ipynb_checkpoints/: Read Wikipedia Kaggle SQLite-checkpoint.ipynb  Read-Wikipedia-Kaggle-SQLite-checkpoint.ipynb  Topic Modeling on Wiki Data Graph-checkpoint.ipynb  Topic Modeling on Wiki on 5 Million-checkpoint.ipynb  Topic Modeling on Wiki on Non-Optimized-checkpoint.ipynb  Topic Modeling on Wiki-checkpoint.ipynb  Wikipedia Extract-checkpoint.ipynb
