[tool.poetry]
name = "wikiextract"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Almer Mendoza <atmalmer23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
pandas = "*"
pandas-compat = "*"
matplotlib = "*"
sklearn = "*"
gensim = "*"
nltk = "*"
jupyter = "*"
pyLDAvis = "*"
spacy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
